Added signing the assembly witj WujiGrid.snk

--- a/src/ServiceStack.Text.SL5/ServiceStack.Text.SL5.csproj
+++ b/src/ServiceStack.Text.SL5/ServiceStack.Text.SL5.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>Bin\Release\ServiceStack.Text.XML</DocumentationFile>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\..\..\WujiGridKey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="System.Runtime.Serialization" />
